Bug 483972 - In text search is missing
Summary: In text search is missing
Status: RESOLVED FIXED
Alias: None
Product: khelpcenter
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.24020
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Documentation Editorial Team
URL:
Keywords:
: 484545 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-19 07:21 UTC by Simeon Ehrig
Modified: 2024-05-25 13:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.2405
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simeon Ehrig 2024-03-19 07:21:31 UTC
SUMMARY

If I open a help text site, e.g. the man page of `systemd.socket` I cannot search in the text. There is no search button and `ctrl+f` also does not work.

I updated from KDE 5.27. Before the search was working via button and shortcut as expected.


STEPS TO REPRODUCE
1. Search for help text on the left site, e.g `systemd.socket`
2. open article
3. press `ctrl+f`

OBSERVED RESULT

Nothing happens.

EXPECTED RESULT

In text search dialog should open.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Nobara Linux 39 (KDE Plasma) 39 (x86_64)
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0 
Qt Version: 6.6.2
Comment 1 Friedrich W. H. Kossebau 2024-04-07 17:39:44 UTC
*** Bug 484545 has been marked as a duplicate of this bug. ***
Comment 2 Friedrich W. H. Kossebau 2024-04-07 17:41:24 UTC
Merge request was started @ https://invent.kde.org/system/khelpcenter/-/merge_requests/47
Comment 3 Luigi Toscano 2024-04-10 16:01:18 UTC
Git commit 3ddb709564a5eec14ed0ad6251b60693fadd8026 by Luigi Toscano, on behalf of Friedrich W. H. Kossebau.
Committed on 10/04/2024 at 16:00.
Pushed by ltoscano into branch 'master'.

Readd page search feature

Lost in port from KHtml to QWebEngine

Initial working code to restore the feature, copied from KMarkdownWebView
and adapted a bit.
FIXED-IN: 6.0.2405

M  +8    -0    CMakeLists.txt
M  +2    -2    khelpcenterui.rc
M  +13   -1    mainwindow.cpp
M  +4    -0    mainwindow.h
A  +116  -0    pagesearchbar.cpp     [License: GPL(v2.0+)]
A  +45   -0    pagesearchbar.h     [License: GPL(v2.0+)]
A  +102  -0    pagesearchbar.ui
M  +6    -0    view.cpp
A  +71   -0    viewcontainer.cpp     [License: GPL(v2.0+)]
A  +39   -0    viewcontainer.h     [License: GPL(v2.0+)]

https://invent.kde.org/system/khelpcenter/-/commit/3ddb709564a5eec14ed0ad6251b60693fadd8026
Comment 4 Simeon Ehrig 2024-05-25 13:38:32 UTC
I got a KDE update with the fix today. It's working like expected :-) Thanks