Readd page search feature

Lost in port from KHtml to QWebEngine

Initial working code to restore the feature, copied from KMarkdownWebView
and adapted a bit.

BUG: 483972
FIXED-IN: 6.0.2405